# steek

./: .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  README.md  WINDOWS_SETUP.md  components.json  create-shortcut.ps1  package-lock.json  package.json  requirements.txt  run.py  start.bat  start.sh  steek-dev.sh  steek-launcher-prod.bat  steek-launcher.bat  update.bat  update.sh  updater.py
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/server/: index.js  manifest-full.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js  root.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  (+2 more)
.svelte-kit/types/: route_meta_data.json
app/: __init__.py  backup.py  database.py
app/routes/: main.py  products.py  sales.py  settings.py
app/static/css/: app.css
app/static/js/: checkout.js
app/templates/: base.html
app/templates/products/: form.html  index.html  search_results.html
app/templates/sales/: checkout.html  confirmation.html  history.html  lines_partial.html
app/templates/settings/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/instellingen/: +page.svelte
src/routes/kassa/: +page.svelte
src/routes/verkopen/: +page.svelte
src/routes/voorraad/: +page.svelte
(+32 files in other folders)
