[package]
name = "steek"
version = "0.1.0"
description = "Steek - Borduurweelde kassa & voorraadbeheer"
authors = ["Borduurweelde"]
edition = "2021"

[lib]
name = "steek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
